<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Auth.RegisterFragment"
    android:layout_marginHorizontal="25dp"
    android:layout_marginVertical="25dp">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/evogria"
        android:text="@string/heading_register"
        android:textAllCaps="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        android:layout_marginVertical="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ET_name"
                android:hint="@string/hint_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" >
        </Space>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/ET_email"
                android:hint="@string/hint_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" >
        </Space>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/ET_password"
                android:hint="@string/hint_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="15dp" >
        </Space>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/ET_rePassword"
                android:hint="@string/hint_repassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="15dp" >
        </Space>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:id="@+id/ET_dob"
                android:hint="@string/hint_dob" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="15dp" >
        </Space>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/heading_register"
            android:clickable="false"
            android:textSize="17sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="15dp" >
        </Space>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register_separation_1"
            android:textSize="15sp"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="15dp" >
        </Space>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_link"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/heading_login"
            android:textSize="17sp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/red_medium"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_baseline_arrow_forward_24"
            app:iconGravity="textEnd"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>