<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/IV_photo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/background_placeholder"
            android:backgroundTint="@color/dark_overlay"
            android:backgroundTintMode="src_over"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/TV_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="@string/sample_title_workoutplan"
            android:textColor="@color/light"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV_price"
            style="@style/text_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_icon_text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp"
            android:text="@string/sample_price"
            android:textColor="@color/dark"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/TV_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/TV_time"
                    style="@style/text_icon"
                    android:drawableTint="@color/light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_time"
                    app:drawableLeftCompat="@drawable/ic_baseline_timer_24" />

                <TextView
                    android:id="@+id/TV_level"
                    style="@style/text_icon"
                    android:drawableTint="@color/light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_level"
                    app:drawableLeftCompat="@drawable/ic_baseline_signal_cellular_alt_24" />

                <TextView
                    android:id="@+id/TV_weeks"
                    style="@style/text_icon"
                    android:drawableTint="@color/light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_weeks"
                    app:drawableLeftCompat="@drawable/ic_baseline_calendar_month_24" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fav_btn"
                style="@style/icon_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:icon="@drawable/ic_baseline_star_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/cd_favorite_btn"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>