<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
>
        <TextView
            android:id="@+id/textView"
            style="@style/text_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/distorted_heading"
            android:text="Let's get back"
            android:textColor="@color/light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            tools:layout_editor_absoluteY="92dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/distorted_heading"
            android:text="to "
            android:textColor="@color/light"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/distorted_heading"
            android:shadowColor="@color/yellow_medium"
            android:shadowRadius="15"
            android:text="FITNESS"
            android:textColor="@color/yellow_medium"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:rotation="90"
            android:src="@drawable/db_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48"
            app:tint="@color/light" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/background_form"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            style="@style/text_title_2"
            android:textColor="@color/dark"
            android:id="@+id/signin_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/signin_heading">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/hint_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/button_primary"
                android:layout_width="match_parent"
                android:text="@string/heading_login"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/login_separation_2"
                android:textSize="15sp"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_link"
                style="@style/button_outlined"
                android:layout_width="match_parent"
                android:text="@string/heading_register"
                app:icon="@drawable/ic_baseline_arrow_forward_24"
                android:backgroundTint="@color/yellow_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login_separation_1"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/google_btn_login"
                    style="@style/button_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_google_login"
                    android:layout_marginEnd="10dp"

                    app:icon="@drawable/google_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fb_btn_login"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fb_btn_login"
                    android:layout_height="wrap_content"
                    style="@style/button_icon"
                    android:layout_width="0dp"
                    android:text="@string/hint_fb_login"
                    app:icon="@drawable/facebook_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/google_btn_login"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>