<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Workout.ItemInfoActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/explore_outer_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/plan_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/bg_placeholder_yellow"
                android:backgroundTint="@color/dark_overlay"
                android:backgroundTintMode="src_over"
                android:maxHeight="300sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/back_btn"
                    style="@style/icon_button_transparent"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/cd_back_btn"
                    app:icon="@drawable/ic_baseline_chevron_left_24"
                    app:iconSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/TV_title"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TV_title"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/sample_plan_title"
                    android:textColor="@color/light"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/start_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/back_btn"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_btn"
                    style="@style/icon_button_transparent"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/cd_favorite_btn"
                    app:icon="@drawable/ic_baseline_star_border_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/TV_title"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/layout_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="228dp"
            android:background="@drawable/background_form"
            android:orientation="vertical"
            android:paddingHorizontal="28dp"
            android:paddingVertical="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:background="@drawable/background_stroke_1">

                <TextView
                    android:id="@+id/TV_time"
                    style="@style/text_icon_large_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:drawableTop="@drawable/ic_baseline_access_time_24"
                    android:text="@string/sample_time"
                    android:textColor="@color/dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/TV_exp_level"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TV_exp_level"
                    style="@style/text_icon_large_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:drawableTop="@drawable/ic_baseline_signal_cellular_alt_24"
                    android:text="@string/sample_level"
                    android:textColor="@color/dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/TV_weeks"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/TV_time"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TV_weeks"
                    style="@style/text_icon_large_top"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:drawableTop="@drawable/ic_baseline_calendar_month_24"
                    android:text="@string/sample_weeks"
                    android:textColor="@color/dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/TV_exp_level"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Description"
                android:layout_marginTop="0dp"
                style="@style/text_title_1_bold"
                android:gravity="center_vertical"/>


            <TextView
                android:id="@+id/desc"
                style="@style/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:text="@string/sample_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Workouts"
                style="@style/text_title_1_bold"
                android:gravity="center_vertical"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/workoutsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                />






            <com.google.android.material.button.MaterialButton
                android:id="@+id/purchase_btn"
                style="@style/button_primary"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="Purchase - LKR 1250.00" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>